# css497

./: Cargo.toml  Dockerfile.aggregator  Dockerfile.datanode_worker  Dockerfile.namenode_foreman  Dockerfile.refinery_deposit  datanode_worker_wrapper.sh  docker-compose.yml  namenode_foreman_wrapper.sh
examples/: Cargo.toml  word_count.rs
ferrum_deposit/: Cargo.toml  build.rs
ferrum_deposit/config/: datanode.xml  deposit.xml  namenode.xml
ferrum_deposit/proto/: common.proto  datanode_namenode.proto  deposit_datanode.proto  deposit_namenode.proto
ferrum_deposit/src/: error.rs  lib.rs
ferrum_deposit/src/config/: datanode_config.rs  deposit_config.rs  mod.rs  namenode_config.rs
ferrum_deposit/src/core/: block_map.rs  datanode.rs  edit_log.rs  mod.rs  namenode.rs
ferrum_deposit/src/datanode/: datanode.rs
ferrum_deposit/src/deposit/: ferrum_deposit_client.rs  mod.rs
ferrum_deposit/src/namenode/: block_map.rs  edit_log.rs  mod.rs  namenode.rs
ferrum_deposit/src/proto/: common.proto  datanode_namenode.proto  deposit_datanode.proto  deposit_namenode.proto
ferrum_deposit/src/tests/: tests.rs
ferrum_refinery/: Cargo.toml  build.rs
ferrum_refinery/config/: foreman.xml  refinery.xml  worker.xml
ferrum_refinery/src/: lib.rs
ferrum_refinery/src/api/: map.rs  mod.rs  reduce.rs
ferrum_refinery/src/config/: foreman_config.rs  mod.rs  refinery_config.rs  worker_config.rs
ferrum_refinery/src/core/: aggregator.rs  errors.rs  foreman.rs  job.rs  mod.rs  task.rs  worker.rs
ferrum_refinery/src/framework/: errors.rs  mod.rs  refinery.rs
ferrum_refinery/src/proto/: aggregator.proto  commons.proto  foreman.proto  foundry.proto  worker.proto
ferrum_refinery/src/tests/: tests.rs
