[package]
name = "ferrum_refinery"
version = "1.0.0"
edition = "2021"
rust-version = "1.71.0"
license = "MIT"

[lib]
name = "ferrum_refinery"
path = "src/lib.rs"

[dependencies]
ferrum_deposit = {path = "../ferrum_deposit"}
chrono = "0.4.37"
tokio = {version = "1.37.0", features = ["full"]}
async-trait = "0.1.79"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
uuid = { version = "1.8.0", features = ["v4"] }
tonic-build = "0.11.0"
tonic = "0.11.0"
prost = "0.12.4"



[dev-dependencies]


[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "foreman"
path = "bin/foreman.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"