[package]
name = "ferrum_refinery"
version = "1.0.0"
edition = "2021"
rust-version = "1.71.0"
license = "MIT"

[lib]
name = "ferrum_refinery"
path = "src/lib.rs"

[dependencies]
ferrum_deposit = {path = "../ferrum_deposit"}
bytes = "1.6.0"
chrono = "0.4.37"
clap = "4.5.4"
tokio = {version = "1.37.0", features = ["full"]}
async-trait = "0.1.79"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
uuid = { version = "1.8.0", features = ["v4"] }
sys-info = "0.9.1"
tonic-build = "0.11.0"
tonic = "0.11.0"
prost = "0.12.4"
anyhow = "1.0.81"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"



[dev-dependencies]


[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "foreman"
path = "bin/foreman.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[[bin]]
name = "aggregator"
path = "bin/aggregator.rs"

[[bin]]
name = "refinery"
path = "bin/refinery.rs"